source/frontend/LanguageParser.cpp

// Generated from Language.g4 by ANTLR 4.8


#include "LanguageListener.h"
#include "LanguageVisitor.h"

#include "LanguageParser.h"


using namespace antlrcpp;
using namespace antlr4;

LanguageParser::LanguageParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

LanguageParser::~LanguageParser() {
  delete _interpreter;
}

std::string LanguageParser::getGrammarFileName() const {
  return "Language.g4";
}

const std::vector<std::string>& LanguageParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& LanguageParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- ProgramContext ------------------------------------------------------------------

LanguageParser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t LanguageParser::ProgramContext::getRuleIndex() const {
  return LanguageParser::RuleProgram;
}

void LanguageParser::ProgramContext::copyFrom(ProgramContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- InstructionLineContext ------------------------------------------------------------------

std::vector<LanguageParser::ExpressionContext *> LanguageParser::InstructionLineContext::expression() {
  return getRuleContexts<LanguageParser::ExpressionContext>();
}

LanguageParser::ExpressionContext* LanguageParser::InstructionLineContext::expression(size_t i) {
  return getRuleContext<LanguageParser::ExpressionContext>(i);
}

std::vector<tree::TerminalNode *> LanguageParser::InstructionLineContext::EOF() {
  return getTokens(LanguageParser::EOF);
}

tree::TerminalNode* LanguageParser::InstructionLineContext::EOF(size_t i) {
  return getToken(LanguageParser::EOF, i);
}

std::vector<tree::TerminalNode *> LanguageParser::InstructionLineContext::NL() {
  return getTokens(LanguageParser::NL);
}

tree::TerminalNode* LanguageParser::InstructionLineContext::NL(size_t i) {
  return getToken(LanguageParser::NL, i);
}

LanguageParser::InstructionLineContext::InstructionLineContext(ProgramContext *ctx) { copyFrom(ctx); }

void LanguageParser::InstructionLineContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LanguageListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterInstructionLine(this);
}
void LanguageParser::InstructionLineContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LanguageListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitInstructionLine(this);
}

antlrcpp::Any LanguageParser::InstructionLineContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<LanguageVisitor*>(visitor))
    return parserVisitor->visitInstructionLine(this);
  else
    return visitor->visitChildren(this);
}
LanguageParser::ProgramContext* LanguageParser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 0, LanguageParser::RuleProgram);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    _localctx = dynamic_cast<ProgramContext *>(_tracker.createInstance<LanguageParser::InstructionLineContext>(_localctx));
    enterOuterAlt(_localctx, 1);
    setState(17);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << LanguageParser::T__2)
      | (1ULL << LanguageParser::T__3)
      | (1ULL << LanguageParser::T__4)
      | (1ULL << LanguageParser::T__6)
      | (1ULL << LanguageParser::Lambda)
      | (1ULL << LanguageParser::Bool)
      | (1ULL << LanguageParser::Int)
      | (1ULL << LanguageParser::Identifier))) != 0)) {
      setState(12);
      expression(0);
      setState(13);
      _la = _input->LA(1);
      if (!(_la == LanguageParser::EOF

      || _la == LanguageParser::NL)) {
      _errHandler->recoverInline(this);
      }
      else {
        _errHandler->reportMatch(this);
        consume();
      }
      setState(19);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(21);
    _errHandler->sync(this);

    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx)) {
    case 1: {
      setState(20);
      match(LanguageParser::EOF);
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExpressionContext ------------------------------------------------------------------

LanguageParser::ExpressionContext::ExpressionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t LanguageParser::ExpressionContext::getRuleIndex() const {
  return LanguageParser::RuleExpression;
}

void LanguageParser::ExpressionContext::copyFrom(ExpressionContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- BinaryExpressionContext ------------------------------------------------------------------

std::vector<LanguageParser::ExpressionContext *> LanguageParser::BinaryExpressionContext::expression() {
  return getRuleContexts<LanguageParser::ExpressionContext>();
}

LanguageParser::ExpressionContext* LanguageParser::BinaryExpressionContext::expression(size_t i) {
  return getRuleContext<LanguageParser::ExpressionContext>(i);
}

tree::TerminalNode* LanguageParser::BinaryExpressionContext::Operator() {
  return getToken(LanguageParser::Operator, 0);
}

LanguageParser::BinaryExpressionContext::BinaryExpressionContext(ExpressionContext *ctx) { copyFrom(ctx); }

void LanguageParser::BinaryExpressionContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LanguageListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterBinaryExpression(this);
}
void LanguageParser::BinaryExpressionContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LanguageListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitBinaryExpression(this);
}

antlrcpp::Any LanguageParser::BinaryExpressionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<LanguageVisitor*>(visitor))
    return parserVisitor->visitBinaryExpression(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ImportInstructionContext ------------------------------------------------------------------

tree::TerminalNode* LanguageParser::ImportInstructionContext::Identifier() {
  return getToken(LanguageParser::Identifier, 0);
}

LanguageParser::ImportInstructionContext::ImportInstructionContext(ExpressionContext *ctx) { copyFrom(ctx); }

void LanguageParser::ImportInstructionContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LanguageListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterImportInstruction(this);
}
void LanguageParser::ImportInstructionContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LanguageListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitImportInstruction(this);
}

antlrcpp::Any LanguageParser::ImportInstructionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<LanguageVisitor*>(visitor))
    return parserVisitor->visitImportInstruction(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ConditionalContext ------------------------------------------------------------------

LanguageParser::ConditionContext* LanguageParser::ConditionalContext::condition() {
  return getRuleContext<LanguageParser::ConditionContext>(0);
}

LanguageParser::ConditionalContext::ConditionalContext(ExpressionContext *ctx) { copyFrom(ctx); }

void LanguageParser::ConditionalContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LanguageListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterConditional(this);
}
void LanguageParser::ConditionalContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LanguageListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitConditional(this);
}

antlrcpp::Any LanguageParser::ConditionalContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<LanguageVisitor*>(visitor))
    return parserVisitor->visitConditional(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ApplicationContext ------------------------------------------------------------------

std::vector<LanguageParser::ExpressionContext *> LanguageParser::ApplicationContext::expression() {
  return getRuleContexts<LanguageParser::ExpressionContext>();
}

LanguageParser::ExpressionContext* LanguageParser::ApplicationContext::expression(size_t i) {
  return getRuleContext<LanguageParser::ExpressionContext>(i);
}

LanguageParser::ApplicationContext::ApplicationContext(ExpressionContext *ctx) { copyFrom(ctx); }

void LanguageParser::ApplicationContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LanguageListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterApplication(this);
}
void LanguageParser::ApplicationContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LanguageListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitApplication(this);
}

antlrcpp::Any LanguageParser::ApplicationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<LanguageVisitor*>(visitor))
    return parserVisitor->visitApplication(this);
  else
    return visitor->visitChildren(this);
}
//----------------- AbstractionContext ------------------------------------------------------------------

tree::TerminalNode* LanguageParser::AbstractionContext::Lambda() {
  return getToken(LanguageParser::Lambda, 0);
}

tree::TerminalNode* LanguageParser::AbstractionContext::Identifier() {
  return getToken(LanguageParser::Identifier, 0);
}

LanguageParser::ExpressionContext* LanguageParser::AbstractionContext::expression() {
  return getRuleContext<LanguageParser::ExpressionContext>(0);
}

LanguageParser::TypeBindingContext* LanguageParser::AbstractionContext::typeBinding() {
  return getRuleContext<LanguageParser::TypeBindingContext>(0);
}

LanguageParser::AbstractionContext::AbstractionContext(ExpressionContext *ctx) { copyFrom(ctx); }

void LanguageParser::AbstractionContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LanguageListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterAbstraction(this);
}
void LanguageParser::AbstractionContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LanguageListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitAbstraction(this);
}

antlrcpp::Any LanguageParser::AbstractionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<LanguageVisitor*>(visitor))
    return parserVisitor->visitAbstraction(this);
  else
    return visitor->visitChildren(this);
}
//----------------- VariableContext ------------------------------------------------------------------

tree::TerminalNode* LanguageParser::VariableContext::Identifier() {
  return getToken(LanguageParser::Identifier, 0);
}

LanguageParser::TypeBindingContext* LanguageParser::VariableContext::typeBinding() {
  return getRuleContext<LanguageParser::TypeBindingContext>(0);
}

LanguageParser::VariableContext::VariableContext(ExpressionContext *ctx) { copyFrom(ctx); }

void LanguageParser::VariableContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LanguageListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterVariable(this);
}
void LanguageParser::VariableContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LanguageListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitVariable(this);
}

antlrcpp::Any LanguageParser::VariableContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<LanguageVisitor*>(visitor))
    return parserVisitor->visitVariable(this);
  else
    return visitor->visitChildren(this);
}
//----------------- PrintInstructionContext ------------------------------------------------------------------

LanguageParser::ExpressionContext* LanguageParser::PrintInstructionContext::expression() {
  return getRuleContext<LanguageParser::ExpressionContext>(0);
}

LanguageParser::PrintInstructionContext::PrintInstructionContext(ExpressionContext *ctx) { copyFrom(ctx); }

void LanguageParser::PrintInstructionContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LanguageListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterPrintInstruction(this);
}
void LanguageParser::PrintInstructionContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LanguageListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitPrintInstruction(this);
}

antlrcpp::Any LanguageParser::PrintInstructionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<LanguageVisitor*>(visitor))
    return parserVisitor->visitPrintInstruction(this);
  else
    return visitor->visitChildren(this);
}
//----------------- LiteralContext ------------------------------------------------------------------

tree::TerminalNode* LanguageParser::LiteralContext::Int() {
  return getToken(LanguageParser::Int, 0);
}

tree::TerminalNode* LanguageParser::LiteralContext::Bool() {
  return getToken(LanguageParser::Bool, 0);
}

LanguageParser::LiteralContext::LiteralContext(ExpressionContext *ctx) { copyFrom(ctx); }

void LanguageParser::LiteralContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LanguageListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterLiteral(this);
}
void LanguageParser::LiteralContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LanguageListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitLiteral(this);
}

antlrcpp::Any LanguageParser::LiteralContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<LanguageVisitor*>(visitor))
    return parserVisitor->visitLiteral(this);
  else
    return visitor->visitChildren(this);
}
//----------------- AssignContext ------------------------------------------------------------------

tree::TerminalNode* LanguageParser::AssignContext::Identifier() {
  return getToken(LanguageParser::Identifier, 0);
}

LanguageParser::ExpressionContext* LanguageParser::AssignContext::expression() {
  return getRuleContext<LanguageParser::ExpressionContext>(0);
}

LanguageParser::TypeBindingContext* LanguageParser::AssignContext::typeBinding() {
  return getRuleContext<LanguageParser::TypeBindingContext>(0);
}

LanguageParser::AssignContext::AssignContext(ExpressionContext *ctx) { copyFrom(ctx); }

void LanguageParser::AssignContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LanguageListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterAssign(this);
}
void LanguageParser::AssignContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LanguageListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitAssign(this);
}

antlrcpp::Any LanguageParser::AssignContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<LanguageVisitor*>(visitor))
    return parserVisitor->visitAssign(this);
  else
    return visitor->visitChildren(this);
}
//----------------- BracketsContext ------------------------------------------------------------------

LanguageParser::ExpressionContext* LanguageParser::BracketsContext::expression() {
  return getRuleContext<LanguageParser::ExpressionContext>(0);
}

LanguageParser::BracketsContext::BracketsContext(ExpressionContext *ctx) { copyFrom(ctx); }

void LanguageParser::BracketsContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LanguageListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterBrackets(this);
}
void LanguageParser::BracketsContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LanguageListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitBrackets(this);
}

antlrcpp::Any LanguageParser::BracketsContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<LanguageVisitor*>(visitor))
    return parserVisitor->visitBrackets(this);
  else
    return visitor->visitChildren(this);
}

LanguageParser::ExpressionContext* LanguageParser::expression() {
   return expression(0);
}

LanguageParser::ExpressionContext* LanguageParser::expression(int precedence) {
  ParserRuleContext *parentContext = _ctx;
  size_t parentState = getState();
  LanguageParser::ExpressionContext *_localctx = _tracker.createInstance<ExpressionContext>(_ctx, parentState);
  LanguageParser::ExpressionContext *previousContext = _localctx;
  (void)previousContext; // Silence compiler, in case the context is not used by generated code.
  size_t startState = 2;
  enterRecursionRule(_localctx, 2, LanguageParser::RuleExpression, precedence);

    size_t _la = 0;

  auto onExit = finally([=] {
    unrollRecursionContexts(parentContext);
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(51);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 5, _ctx)) {
    case 1: {
      _localctx = _tracker.createInstance<LiteralContext>(_localctx);
      _ctx = _localctx;
      previousContext = _localctx;

      setState(24);
      _la = _input->LA(1);
      if (!(_la == LanguageParser::Bool

      || _la == LanguageParser::Int)) {
      _errHandler->recoverInline(this);
      }
      else {
        _errHandler->reportMatch(this);
        consume();
      }
      break;
    }

    case 2: {
      _localctx = _tracker.createInstance<VariableContext>(_localctx);
      _ctx = _localctx;
      previousContext = _localctx;
      setState(25);
      match(LanguageParser::Identifier);
      setState(27);
      _errHandler->sync(this);

      switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx)) {
      case 1: {
        setState(26);
        typeBinding();
        break;
      }

      }
      break;
    }

    case 3: {
      _localctx = _tracker.createInstance<AbstractionContext>(_localctx);
      _ctx = _localctx;
      previousContext = _localctx;
      setState(29);
      match(LanguageParser::Lambda);
      setState(30);
      match(LanguageParser::Identifier);
      setState(32);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == LanguageParser::T__11) {
        setState(31);
        typeBinding();
      }
      setState(34);
      match(LanguageParser::T__0);
      setState(35);
      expression(7);
      break;
    }

    case 4: {
      _localctx = _tracker.createInstance<AssignContext>(_localctx);
      _ctx = _localctx;
      previousContext = _localctx;
      setState(36);
      match(LanguageParser::Identifier);
      setState(38);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == LanguageParser::T__11) {
        setState(37);
        typeBinding();
      }
      setState(40);
      match(LanguageParser::T__1);
      setState(41);
      expression(6);
      break;
    }

    case 5: {
      _localctx = _tracker.createInstance<ConditionalContext>(_localctx);
      _ctx = _localctx;
      previousContext = _localctx;
      setState(42);
      condition();
      break;
    }

    case 6: {
      _localctx = _tracker.createInstance<PrintInstructionContext>(_localctx);
      _ctx = _localctx;
      previousContext = _localctx;
      setState(43);
      match(LanguageParser::T__2);
      setState(44);
      expression(3);
      break;
    }

    case 7: {
      _localctx = _tracker.createInstance<ImportInstructionContext>(_localctx);
      _ctx = _localctx;
      previousContext = _localctx;
      setState(45);
      match(LanguageParser::T__3);
      setState(46);
      match(LanguageParser::Identifier);
      break;
    }

    case 8: {
      _localctx = _tracker.createInstance<BracketsContext>(_localctx);
      _ctx = _localctx;
      previousContext = _localctx;
      setState(47);
      match(LanguageParser::T__4);
      setState(48);
      expression(0);
      setState(49);
      match(LanguageParser::T__5);
      break;
    }

    }
    _ctx->stop = _input->LT(-1);
    setState(60);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 7, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        if (!_parseListeners.empty())
          triggerExitRuleEvent();
        previousContext = _localctx;
        setState(58);
        _errHandler->sync(this);
        switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 6, _ctx)) {
        case 1: {
          auto newContext = _tracker.createInstance<ApplicationContext>(_tracker.createInstance<ExpressionContext>(parentContext, parentState));
          _localctx = newContext;
          pushNewRecursionContext(newContext, startState, RuleExpression);
          setState(53);

          if (!(precpred(_ctx, 8))) throw FailedPredicateException(this, "precpred(_ctx, 8)");
          setState(54);
          expression(9);
          break;
        }

        case 2: {
          auto newContext = _tracker.createInstance<BinaryExpressionContext>(_tracker.createInstance<ExpressionContext>(parentContext, parentState));
          _localctx = newContext;
          pushNewRecursionContext(newContext, startState, RuleExpression);
          setState(55);

          if (!(precpred(_ctx, 4))) throw FailedPredicateException(this, "precpred(_ctx, 4)");
          setState(56);
          match(LanguageParser::Operator);
          setState(57);
          expression(5);
          break;
        }

        } 
      }
      setState(62);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 7, _ctx);
    }
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }
  return _localctx;
}

//----------------- BodyContext ------------------------------------------------------------------

LanguageParser::BodyContext::BodyContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

LanguageParser::ExpressionContext* LanguageParser::BodyContext::expression() {
  return getRuleContext<LanguageParser::ExpressionContext>(0);
}


size_t LanguageParser::BodyContext::getRuleIndex() const {
  return LanguageParser::RuleBody;
}

void LanguageParser::BodyContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LanguageListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterBody(this);
}

void LanguageParser::BodyContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LanguageListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitBody(this);
}


antlrcpp::Any LanguageParser::BodyContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<LanguageVisitor*>(visitor))
    return parserVisitor->visitBody(this);
  else
    return visitor->visitChildren(this);
}

LanguageParser::BodyContext* LanguageParser::body() {
  BodyContext *_localctx = _tracker.createInstance<BodyContext>(_ctx, getState());
  enterRule(_localctx, 4, LanguageParser::RuleBody);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(63);
    expression(0);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ConditionContext ------------------------------------------------------------------

LanguageParser::ConditionContext::ConditionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

LanguageParser::ExpressionContext* LanguageParser::ConditionContext::expression() {
  return getRuleContext<LanguageParser::ExpressionContext>(0);
}

std::vector<LanguageParser::BodyContext *> LanguageParser::ConditionContext::body() {
  return getRuleContexts<LanguageParser::BodyContext>();
}

LanguageParser::BodyContext* LanguageParser::ConditionContext::body(size_t i) {
  return getRuleContext<LanguageParser::BodyContext>(i);
}


size_t LanguageParser::ConditionContext::getRuleIndex() const {
  return LanguageParser::RuleCondition;
}

void LanguageParser::ConditionContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LanguageListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterCondition(this);
}

void LanguageParser::ConditionContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LanguageListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitCondition(this);
}


antlrcpp::Any LanguageParser::ConditionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<LanguageVisitor*>(visitor))
    return parserVisitor->visitCondition(this);
  else
    return visitor->visitChildren(this);
}

LanguageParser::ConditionContext* LanguageParser::condition() {
  ConditionContext *_localctx = _tracker.createInstance<ConditionContext>(_ctx, getState());
  enterRule(_localctx, 6, LanguageParser::RuleCondition);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(80);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case LanguageParser::T__6: {
        enterOuterAlt(_localctx, 1);
        setState(65);
        match(LanguageParser::T__6);
        setState(66);
        expression(0);
        setState(67);
        match(LanguageParser::T__7);
        setState(68);
        body();
        setState(69);
        match(LanguageParser::T__8);
        setState(70);
        body();
        break;
      }

      case LanguageParser::T__4: {
        enterOuterAlt(_localctx, 2);
        setState(72);
        match(LanguageParser::T__4);
        setState(73);
        expression(0);
        setState(74);
        match(LanguageParser::T__9);
        setState(75);
        body();
        setState(76);
        match(LanguageParser::T__10);
        setState(77);
        body();
        setState(78);
        match(LanguageParser::T__5);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TypeBindingContext ------------------------------------------------------------------

LanguageParser::TypeBindingContext::TypeBindingContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

LanguageParser::TypeContext* LanguageParser::TypeBindingContext::type() {
  return getRuleContext<LanguageParser::TypeContext>(0);
}


size_t LanguageParser::TypeBindingContext::getRuleIndex() const {
  return LanguageParser::RuleTypeBinding;
}
